fix: replace br with line jump and bottom-bar z-index

--- a/src/components/bottom-bar/bottom-bar.css
+++ b/src/components/bottom-bar/bottom-bar.css
@@ -9,6 +9,7 @@ $font: 'Roboto Condensed', sans-serif;
     width: 100%;
     bottom: 0px;
     display: flex;
+    z-index: 3;
 
     .logo {
         position: relative;
